<resources>
    <string name="app_name">KamusFJ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english_indonesia">English - Indonesia</string>
    <string name="indonesia_english">Indonesia - English</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="kata">Word</string>
    <string name="keterangan">Description</string>
    <string name="hasil_terjemahan_kata">Translation result.</string>
    <string name="ketikkan_kata_pencarian">Write the keyword</string>
    <string name="app_first_run">Initialize</string>
    <string name="menyiapkan_data">Preparing data...</string>
</resources>
