<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fj.naufalprakoso.dicodingkamusmade.BahasaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/ketikkan_kata_pencarian"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <AutoCompleteTextView
        android:id="@+id/edit_auto_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/background_border_image_active"
        android:hint="@string/app_name"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/hasil_terjemahan_kata"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/kata"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/text_kata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        tools:text="Example" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/keterangan"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/text_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        tools:text="Example" />

</LinearLayout>
